			   XPCE ChangeLog
			   ==============



VERSION 6.6.17, distributed with SWI-Prolog 5.6.17
==================================================

* FIXED: Colours of arrow-heads in PostScript generation.  Anders Bouwer.

VERSION 6.6.16, distributed with SWI-Prolog 5.6.16
==================================================

* FIXED: Crash when accessing files with illegal multi-byte sequences in the
  name (Unix version only).

VERSION 6.6.15, distributed with SWI-Prolog 5.6.15
==================================================

* FIXED: PceEmacs: Backspace in incremental search.

VERSION 6.6.14, distributed with SWI-Prolog 5.6.14
==================================================

* FIXED: compatibility problem in saved text_buffer objects between version
  5.4.7 and 5.6.13.  Tom Conlon.  There is still an issue.  While providing
  Unicode support the save format was changed, but the version was not
  incremented.  Unfortunately there is no other way to distinguish the old
  format from the new.  Therefore, 6.6.14 can read files produced by itself
  and pre-unicode versions, but not produced by unicode versions < 6.6.14.
  Files containing only ASCII characters (<128) are compatible.


VERSION 6.6.12, distributed with SWI-Prolog 5.6.12
==================================================

* ENHANCED: `text_buffer->for_all_fragments' to avoid use of alloca() for
  large number of arguments.  Patchwork for problems in Windows with limited 
  stack-sizes.  Pierpaolo Bernardi.


VERSION 6.6.11, distributed with SWI-Prolog 5.6.11
==================================================

* FIXED: Bug#82: various issues in gemetry management.

* MODIFIED: PceEmacs/editor: ->delete_blank_lines (^X^O) is now GNU-Emacs
  compatible.  Pierpaolo Bernardi.

* FIXED: PceEmacs: C-hk (describe-key) using \C-c or \C-x prefix keys.
  Pierpaolo Bernardi.

* FIXED: library(tabular): avoid sending ->margin to objects with a
  different interpretation.
